[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sensors/Sensor_HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Images/sensor_frame.jpg" type="Texture" id=2]
[ext_resource path="res://ControlPanel.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 334, 212 )

[node name="ControlPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_right = 859.0
margin_bottom = 520.0
custom_constants/vseparation = 100
custom_constants/hseparation = 100
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/Panel/MarginContainer/GridContainer"]
margin_right = 379.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera_Sensor_HUD" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel/MarginContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 354.0
margin_bottom = 195.0

[node name="Panel2" type="Panel" parent="MarginContainer/Panel/MarginContainer/GridContainer"]
margin_left = 479.0
margin_right = 858.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lidar_Sensor_HUD" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel2/MarginContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 354.0
margin_bottom = 195.0

[node name="Panel3" type="Panel" parent="MarginContainer/Panel/MarginContainer/GridContainer"]
margin_top = 310.0
margin_right = 379.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Whisker_Sensor_HUD" parent="MarginContainer/Panel/MarginContainer/GridContainer/Panel3/MarginContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 354.0
margin_bottom = 195.0
